<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background">

    <!-- LOGO -->

    <ImageView
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name" />

    <!-- 头像 -->

    <ImageView
        android:id="@+id/login_img_photo"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="135dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_default_photo" />


    <!-- 中间的白线，滑动轨道 -->

    <View
        android:id="@+id/login_view_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="#ffffff" />

    <!--滑动的图标 -->

    <ImageView
        android:id="@+id/login_img_slide"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_ask_circle" />

    <!-- 用户名输入控件 -->

    <EditText
        android:id="@+id/login_edit_username"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_above="@id/login_view_line"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:background="#00000000"
        android:hint="@string/login_name"
        android:maxLength="12"
        android:singleLine="true"
        android:textColor="#ffffff"
        android:textColorHint="#e9e7ef"
        android:textSize="18sp">

        <requestFocus />
    </EditText>

    <!-- 用户名输入控件清空按钮 -->

    <Button
        android:id="@+id/login_btn_clear_username"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_above="@id/login_view_line"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="7dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/ic_x_circle_white"
        android:contentDescription="@string/app_name"
        android:visibility="gone" />

    <!-- 密码输入控件 -->

    <EditText
        android:id="@+id/login_edit_password"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_below="@id/login_view_line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:background="#00000000"
        android:hint="@string/login_pass"
        android:inputType="textPassword"
        android:maxLength="12"
        android:textColor="#ffffff"
        android:textColorHint="#e9e7ef"
        android:textSize="18sp" />

    <!-- 密码输入控件清空按钮 -->

    <Button
        android:id="@+id/login_btn_clear_password"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/login_view_line"
        android:layout_marginRight="50dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/ic_x_circle_white"
        android:contentDescription="@string/app_name"
        android:visibility="gone" />

    <!-- 左下角注册按钮 -->

    <Button
        android:id="@+id/tv_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="65dp"
        android:layout_marginLeft="60dp"
        android:background="@drawable/background_button"
        android:text="忘记密码"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <!-- 右下角游客登录按钮 -->

    <Button
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="65dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/background_button"
        android:text="注    册"
        android:textColor="#ffffff"
        android:textSize="15sp" />

</RelativeLayout>